apt (0.9.14.2) UNRELEASED; urgency=low

  [ Joe Hansen ]
  * Danish translation update. Closes: #732166

 -- Christian Perrier <bubulle@debian.org>  Sun, 15 Dec 2013 08:43:06 +0100

apt (0.9.14.1) unstable; urgency=medium

  * fix apt-get source -t dist regression (closes: #731853)
    and add testcase
  * clarify error message when apt-get source=ver fails
    (thans to David Kalnischkies)
  * Fix conffile prompt regression (LP: #1260297)
    and add testcase
  * improve error message for apt-get source pkg:arch{=ver,/release}

 -- Michael Vogt <mvo@debian.org>  Thu, 12 Dec 2013 18:34:29 +0100

apt (0.9.14) unstable; urgency=low

  [ David Kalnischkies ]
  * merge ubuntus apport reporting changes to reduce diff
  * enable NOISE for build logs to enable analyse
  * introduce a vendor system to change sources.list
  * add a vendor specific file to have configurable entities
  * use a substvar to set the archive-keyring in debian/control
  * cherry-pick ubuntus (disabled) net-update fixes
  * generate apt-key script with vendor info about keys
  * drop old /var/state to /var/lib transition artefacts

  [ Steve Langasek ]
  * prepare-release: declare the packages needed as source build deps.

  [ Michael Vogt ]
  * enable release based selection for deb-src (closes: 731102)
  * document Dpkg::Progress-Fancy (closes: 726169), thanks to James McCoy
  * vendor/makefile: fix build error for parallel builds
  * Handle SIGWINCH in APT::Progress-Fancy=1

 -- Michael Vogt <mvo@debian.org>  Sat, 07 Dec 2013 14:54:31 +0100

apt (0.9.13.1) unstable; urgency=low

  [ Colin Watson ]
  * fix "apt-get  --purge build-dep" (closes: #720597)
  * fix regression that APT::Keep-Fds is not honored (closes: #730490)
  
  [ Michael Vogt ]
  * add "-f" option to "build-dep" as sbuild is using it to fix 
    regression with cross-building (LP: #1255806)
  * add autopkgtest support for the integration testsuite
  * merge mvo/feature/short-list
  * merge mvo/feature/edit-sources