@@ -1,0 +1,6 @@
+# See sources.list(5) manpage for more information
+# Remember that CD-ROMs, DVDs and such are managed through the apt-cdrom tool.
+deb http://mirrordirector.raspbian.org/raspbian &stable-codename; main contrib non-free
+
+# Uncomment if you want the apt-get source function to work
+#deb-src http://mirrordirector.raspbian.org/raspbian &stable-codename; main contrib non-free
