@@ -2,6 +2,9 @@ apt (0.9.14.2) UNRELEASED; urgency=low
 
   [ Joe Hansen ]
   * Danish translation update. Closes: #732166
+  
+  [ Peter Green ]
+  * add apt-vendor for raspbian. Closes: #732749
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 15 Dec 2013 08:43:06 +0100
 
